# GauXC

cmake/: gauxc-exchcxx.cmake  gauxc-gau2grid.cmake  gauxc-integratorxx.cmake
src/: CMakeLists.txt
